tests/fixtures/syntax/valid/write_step_basic.repor
case "write step basic" {
  write <"expected/stdout.txt"> ```
    expected output
    ```
  $ true
  assert {
    exit 0
  }
}
