tests/fixtures/syntax/invalid/write_step_unterminated_fence.repor
case "write step unterminated fence is rejected" {
  write <"a.txt"> ```
    hello
  $ true
  assert {
    exit 0
  }
}
